# rag-rk3568

./: .gitignore  CMakeLists.txt  README.md
data/: manual.txt
docs/: ISSUES.md  RESUME.md  TECHNICAL.md
include/rag/: bm25_index.h  context_builder.h  doc_loader.h  embedding.h  hybrid_retriever.h  kv_cache.h  llm_inference.h  logger.h  rag_pipeline.h  tokenizer.h  types.h
scripts/: build_lubancat2.sh  download_deps.sh
src/: bm25_index.cpp  context_builder.cpp  doc_loader.cpp  embedding.cpp  hybrid_retriever.cpp  kv_cache.cpp  llm_inference.cpp  main.cpp  rag_pipeline.cpp  tokenizer.cpp
tests/: CMakeLists.txt  test_bm25.cpp  test_kv_cache.cpp  test_retriever.cpp
